# run-emu

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  set_env.sh  todo.md
backend/: manage.py
backend/constants/: states.py
backend/database/: librarian.py
backend/explorer/: models.py  serializers.py  urls.py  views.py
backend/runemu/: settings.py  urls.py
backend/scripts/: update.py
backend/spiders/: rf_spider.py  spider.py  usa_spider.py  usu_spider.py
backend/utils/: logger_utils.py  utils.py
backend/weather/: weather_stations.py
data/: spider_dump.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: +Head.tsx  +config.ts  App.tsx  index.css  input.css  main.tsx  output.css
frontend/src/api/: boundaries.ts  races.ts  races.tsx
frontend/src/components/: AboutMenu.tsx  ActionButton.tsx  Button.tsx  DateBadge.tsx  DateDropdown.tsx  DistanceBadge.tsx  DistanceDropdown.tsx  Footer.tsx  Header.tsx  LinkableHeading.tsx  MainContent.tsx  MapMarker.tsx  MoreDropdown.tsx  OptionsBar.tsx  RaceCard.tsx  RaceFeed.tsx  RaceMap.tsx  RangeSlider.tsx  SearchBar.tsx  SortDropdown.tsx  SubHeader.tsx
frontend/src/constants/: States.tsx
frontend/src/context/: RaceFeedContext.tsx  UserSettingsContext.tsx
frontend/src/layouts/: Layout.tsx
runemu_backend/runemu/: asgi.py  settings.py  wsgi.py
scripts/: add_light_mode.py  crawl.py  parse_weather.py  simplify_geojson.py  update_db.py
supabase/: config.toml
(+38 files in other folders)
