[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for runemu website for discovering races."
authors = ["sammy-may <samuel.james.may1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
rich = "^13.9.4"
logging = "^0.4.9.6"
django-extensions = "^3.2.3"
geopy = "^2.4.1"
parse = "^1.20.2"
parquet = "^1.3.1"
pandas = "^2.2.3"
pyarrow = "^18.0.0"
tqdm = "^4.67.0"
jupyter = "^1.1.1"
folium = "^0.18.0"
supabase = "^2.10.0"
free-proxy = "^1.1.3"
geocoder = "^1.38.1"
joblib = "^1.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
